# toyhaskell_haskell

./: .gitignore  BUGS  Eval.hs  Hakefile  Interact.hs  Lexer.hs  Parser.hs  README  TODO  Value.hs  memo  runtoy.sh  test.hs  testAlpha.sh  testHappy.sh  testLexer.hs  toy.hs  toy.sh  toyhaskell.cabal
data/: operator-table.lst
examples/: case.hs  church.hs  error.hs  fix.hs  forHappy.hs  iota.hs  jot.hs  layoutTest.hs  parseError.hs  putStr.hs  scope.hs  scope1.hs  ski.hs  test.hs  testForHappy.hs  zot.hs
memos/: fix  memo  sizes  ski
src/: Alpha.hs  BuildExpression.hs  Env.hs  Eval.hs  Fixity.hs  Interact.hs  Lexer.hs  MainTools.hs  NewParser.y  Parser.hs  Parser.y  ParserTools.hs  Preprocessor.hs  Primitives.hs  ToyHaskell.hs  Types.hs  Value.hs  runtoy.hs  testAlpha.hs  testHappy.hs  testPre.hs  testPrep.hs  toy.hs
tests/: Interact.hs  Tools.hs  eight.hs  hello.hs  infix.hs  multiType.hs  prep.txt  test.op  test2.op  testAlpha.hs  testExpression.hs  testLayout.hs  testLexer.hs  testOp.hs  testParser.hs  testPrep.hs  testPreprocessor.hs  unitTest.hs
tools/: countLines.hs  deleteSpaceInParens.hs  deleteSpaceInParens.sh  putModTree.hs  sub.hs  sub.sh
