build-type:	Simple
cabal-version:	>= 1.2

name:		toyhaskell
version:	0.0.1
stability:	experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Language
synopsis:	small subset of haskell
description:	small subset of haskell

data-dir:	data
data-files:	operator-table.lst

executable runtoy
  hs-source-dirs:	src
  main-is:		runtoy.hs
  other-modules:	MainTools, Interact, Eval, Parser, BuildExpression,
    Preprocessor, Lexer, Types
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, parsec

executable toy
  hs-source-dirs:	src
  main-is:		toy.hs
  other-modules:	MainTools, Interact, Eval, Parser, BuildExpression,
    Preprocessor, Lexer, Types
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, parsec
