build-type:	Simple
cabal-version:	>= 1.2

name:		toyhaskell
version:	0.0.1
stability:	experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Language
synopsis:	small subset of haskell
description:	small subset of haskell

executable runtoy
  hs-source-dirs:	src
  main-is:		runtoy.hs
  other-modules:	MainTools, Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, array

executable toy
  hs-source-dirs:	src
  main-is:		toy.hs
  other-modules:	MainTools, Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, array
