build-type:	Simple
cabal-version:	>= 1.2

name:		toyhaskell
version:	0.0.1
stability:	experimental
author:		Yoshikuni Jujo <PAF01143@nifty.ne.jp>
maintainer:	Yoshikuni Jujo <PAF01143@nifty.ne.jp>

license:	BSD3
license-file:	LICENSE

category:	Language
synopsis:	small subset of haskell
description:	small subset of haskell

flag test
  description:	Enable test
  default:	False

library
  hs-source-dirs:	src
  exposed-modules:	ToyHaskell
  other-modules:	Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, array

executable runtoy
  hs-source-dirs:	src
  main-is:		runtoy.hs
  other-modules:	MainTools, Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, array

executable toy
  hs-source-dirs:	src
  main-is:		toy.hs
  other-modules:	MainTools, Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, array

executable testToy
  if flag ( test )
    buildable:		True
  else
    buildable:		False
  hs-source-dirs:	src, tests
  main-is:		unitTest.hs
  other-modules:	MainTools, Eval, Lexer, Value, Parser
  ghc-options:		-Wall
  build-depends:	base > 3 && < 5, monads-tf, yjtools, array, HUnit
  
